--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1842,7 +1842,7 @@ a:hover, a:visited, a:active {
 
 /* line 358, ../../app/stylesheets/partials/frame.scss */
 .user-post-origin-twitter:before, .user-post-origin-facebook:before, .user-post-origin-tumblr:before {
-  content: url('/images/../images/assets/twitter_stamp.svg?1336694545');
+  content: url('/images/../images/assets/twitter_stamp.svg?1337713227');
   float: left;
   font-size: 0.75em;
   margin: 1px 3px;
@@ -1850,12 +1850,12 @@ a:hover, a:visited, a:active {
 
 /* line 368, ../../app/stylesheets/partials/frame.scss */
 .user-post-origin-facebook:before {
-  content: url('/images/../images/assets/facebook_stamp.svg?1336694545');
+  content: url('/images/../images/assets/facebook_stamp.svg?1337713227');
 }
 
 /* line 375, ../../app/stylesheets/partials/frame.scss */
 .user-post-origin-tumblr:before {
-  content: url('/images/../images/assets/tumblr_stamp.svg?1336694545');
+  content: url('/images/../images/assets/tumblr_stamp.svg?1337713227');
 }
 
 /* line 380, ../../app/stylesheets/partials/frame.scss */
@@ -2753,7 +2753,8 @@ a:hover, a:visited, a:active {
   border-bottom: none;
 }
 /* line 95, ../../app/stylesheets/partials/rolls.scss */
-.share-form legend, .share-form label {
+.share-form legend,
+.share-form label {
   float: left;
   font-weight: 500;
   margin: 8px 0 5px;
@@ -3408,7 +3409,9 @@ a:hover, a:visited, a:active {
   text-decoration: none;
 }
 /* line 54, ../../app/stylesheets/partials/team.scss */
-.about-nav h2, .about-definition-peripherals h2, .about-nav h3, .about-definition-peripherals h3 {
+.about-nav h2, .about-definition-peripherals h2,
+.about-nav h3,
+.about-definition-peripherals h3 {
   font-size: 12px;
   line-height: 1.4;
 }
@@ -3745,7 +3748,12 @@ a:hover, a:visited, a:active {
  * Need to integrate the h5bp normalizer into this compass fanciness.
  * @import "compass/reset";
  */
-/* line 6, ../../app/stylesheets/partials/load-more.scss */
+/* line 3, ../../app/stylesheets/partials/load-more.scss */
+.load-more {
+  text-align: center;
+}
+
+/* line 7, ../../app/stylesheets/partials/load-more.scss */
 .load-more-button {
   background-color: #343434;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #4e4e4e), color-stop(100%, #343434));
@@ -3770,6 +3778,7 @@ a:hover, a:visited, a:active {
   color: #efefef;
   padding: 6px 13px;
   margin: 0 auto;
+  width: 110px;
 }
 
 /* Welcome to Compass.
